# CloZ-AI

./: .env.example  .env.sample  .gitignore  INTEGRATION_PROGRESS.md  Makefile  README.md  REPORTING.md  demo_feedback_loop.py  pyproject.toml  requirements.txt
configs/: generation_model.yaml  json_template.json  json_template.json.sample  llm_base_understand.yaml
results/: model_response.json
scripts/: setup_vton_weights.py
src/: config.py  main.py  main_simulation.py  pipeline.py
src/embedding_generator/: extract_visual_metadata.py  generate_fashionclip_embeddings.py
src/fashion_engine/: __init__.py  config.py  db_manager.py  encoder.py  planner.py  recommender.py  vton.py  vton.py.bak
src/fashion_engine/utils/: load.py
src/feedback_pipeline/: README.md  __init__.py  config.py  main.py  requirements.txt
src/feedback_pipeline/adapters/: __init__.py  main_adapter.py
src/feedback_pipeline/agents/: __init__.py  analyst_agent.py  manager_agent.py
src/feedback_pipeline/checkers/: __init__.py  embedding_buying_trigger.py  embedding_wardrobe_checker.py
src/feedback_pipeline/interfaces/: __init__.py  buying_trigger.py  generation_model.py  real_generation_model.py  (+1 more)
src/generation_pipeline/: __init__.py
src/image2category/: make_category.py
src/multimodality/: colab_integrated_setup.py  fashion_mvp_v2.py  main_simulation.py  requirements.txt
src/understand_agent/: span_extractor_train.py  understand_formatter.py  understand_model.py
src/understand_model/: understand_model.py
tests/: test_json_extractor.py  test_understand_agent.py
(+42 files in other folders)
